Fix align images about

--- a/static/sass/_poli_about.scss
+++ b/static/sass/_poli_about.scss
@@ -102,7 +102,7 @@ section.about.outside-app {
       .card-row [class*="card-col"] {
         display: table-cell;
         position: relative;
-        vertical-align: middle;
+        vertical-align: top;
         word-break: break-word;
       }
       .card-col-image {
